--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@famebot/hsl-gen",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"description": "Generates a color scheme with HSL values",
 	"main": "./src/index.js",
 	"scripts": {
@@ -23,7 +23,7 @@
 		"url": "https://github.com/famebot/hsl-gen/issues"
 	},
 	"homepage": "https://github.com/famebot/hsl-gen#readme",
-	"dependencies": {
+	"devDependencies": {
 		"bumpp": "^9.0.0",
 		"conventional-changelog-cli": "^2.2.2",
 		"mocha": "^10.2.0",
