feat: provide CLS and UMD bundles via Microbundle
- Add devDep Microbundle https://github.com/developit/microbundle
- Update existing ESM example (plus `mv example/ examples/`), test, and readme
    + ESM example `reset` script: support npm and yarn v1 in addition to pnpm
- Update license from ISC to MIT for universality depsite compatibility

--- a/examples/package.json
+++ b/examples/package.json
@@ -3,8 +3,10 @@
 	"version": "1.0.0",
 	"description": "@famebot/hsl-gen example",
 	"scripts": {
-		"reset": "rm -rf example/node_modules example/pnpm-lock.yaml",
-		"start": "node index.js",
+		"reset": "rm -rf node_modules pnpm-lock.yaml package-lock.json yarn.lock",
+		"start": "node node-esm.js",
+		"enpm": "node node-esm-npm.js",
+		"cjs": "node node-cjs.cjs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Ricky de Laveaga (https://rdela.com)",
