--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
 	"name": "@famebot/hsl-gen",
 	"version": "0.1.3",
 	"description": "Generates a color scheme with HSL values",
-	"main": "./src/index.js",
+	"type": "module",
+	"source": "./src/index.js",
+	"exports": {
+		"default": "./dist/hsl-gen.modern.js",
+		"require": "./dist/hsl-gen.cjs"
+	},
+	"main": "./dist/hsl-gen.cjs",
+	"module": "./dist/hsl-gen.module.js",
+	"umd:main": "./dist/hsl-gen.umd.js",
+	"unpkg": "./dist/hsl-gen.umd.js",
 	"scripts": {
+		"build": "microbundle",
+		"dev": "microbundle watch",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
 		"format": "prettier --single-quote --print-width 100 --use-tabs --write src/*.js src/**/*.js",
 		"release": "bumpp -x \"npm run changelog\" --all --commit --tag --push && npm publish",
 		"test": "mocha"
 	},
+	"author": "Ricky de Laveaga (https://rdela.com)",
+	"license": "MIT",
 	"repository": "https://github.com/famebot/hsl-gen",
+	"bugs": {
+		"url": "https://github.com/famebot/hsl-gen/issues"
+	},
+	"homepage": "https://github.com/famebot/hsl-gen#readme",
 	"keywords": [
 		"hsl",
 		"gen",
@@ -17,17 +34,11 @@
 		"color",
 		"scheme"
 	],
-	"author": "Ricky de Laveaga (https://rdela.com)",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/famebot/hsl-gen/issues"
-	},
-	"homepage": "https://github.com/famebot/hsl-gen#readme",
 	"devDependencies": {
 		"bumpp": "^9.0.0",
 		"conventional-changelog-cli": "^2.2.2",
+		"microbundle": "^0.15.1",
 		"mocha": "^10.2.0",
 		"prettier": "^2.8.4"
-	},
-	"type": "module"
+	}
 }
