--- a/examples/package.json
+++ b/examples/package.json
@@ -1,19 +1,20 @@
 {
 	"name": "hsl-gen-example",
-	"version": "1.0.0",
+	"version": "0.3.0",
 	"description": "@famebot/hsl-gen example",
 	"scripts": {
 		"build": "echo \"noop: prebuilt\" && exit 0",
 		"cjs": "node node-cjs.cjs",
 		"enpm": "node node-esm-npm.js",
 		"reset": "rm -rf node_modules pnpm-lock.yaml package-lock.json yarn.lock",
+		"serve": "npx servor browser-umd --reload --browse",
 		"start": "node node-esm.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Ricky de Laveaga (https://rdela.com)",
 	"license": "ISC",
 	"dependencies": {
-		"@famebot/hsl-gen": "^0.2.2"
+		"@famebot/hsl-gen": "^0.3.0"
 	},
 	"type": "module"
 }
