--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@famebot/hsl-gen",
-	"version": "0.2.2",
+	"version": "0.3.0",
 	"description": "Generates a color scheme with HSL values",
 	"type": "module",
 	"source": "./src/index.js",
@@ -17,7 +17,7 @@
 		"dev": "microbundle watch",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
 		"format": "prettier --single-quote --print-width 100 --use-tabs --write src/*.js src/**/*.js",
-		"release": "bumpp -x \"npm run changelog\" --all --commit --tag --push && npm publish",
+		"release": "microbundle && bumpp -x \"npm run changelog\" --all --commit --tag --push && npm publish",
 		"test": "mocha"
 	},
 	"author": "Ricky de Laveaga (https://rdela.com)",
