BREAKING: add missing color values, rename some scheme values
Breaking change: renamed color scheme values ⚠️

- `darkhuehsl` => `huehsldark`
- `darkhuehsldarker` => `huehsldarker`
- `darkhuehsllowmid` => `huehsllowmid`

New color scheme values 🆕

- `complementhslxlight`
- `complementhsllighter`
- `complementhsllowmid`
- `analogoushslxlight`
- `analogoushsllighter`
- `analogoushsllowmid`

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,5 +1,8 @@
 changelog:
   categories:
+    - title: ⚠️ Breaking Changes
+      labels:
+        - breaking
     - title: 🆕 Features
       labels:
         - '*'
